<resources>
    <string name="app_name">ELD</string>
    <string name="prompt_email">username</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_back">Back</string>
    <string name="action_installer_id">Done</string>
    <string name="action_dock">Dock</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_rule">Current rule</string>
    <string name="time_zone">Time Zone</string>
    <string name="co_driver">Co-Driver</string>
    <string name="vehicle_miles">Vehicle Miles</string>
    <string name="total_distance">Total Distance</string>
    <string name="total_miles_hours">Veh. Mi/Hrs</string>
    <string name="driving_hours">Driving Hours</string>
    <string name="work_shift_hour">Work Shift Hour</string>
    <string name="driving_hours_phone">Driving</string>
    <string name="work_shift_hour_phone">Work Shift</string>
    <string name="button_back">BACK</string>
    <string name="button_save">SAVE</string>
    <string name="duty_status_change_activity_title">Duty Status Change</string>
    <string name="duty_status_label">Select Duty Status</string>
    <string name="annotation">Annotation</string>
    <string name="annotation_string_1">Border Crossing</string>
    <string name="annotation_string_2">Cargo Check</string>
    <string name="annotation_string_3">DOT Inspection</string>
    <string name="annotation_string_4">DVIR</string>
    <string name="annotation_string_5">Fueling</string>
    <string name="annotation_string_6">Loading</string>
    <string name="annotation_string_7">Unloading</string>
    <string name="instruction_text">Type Text here...</string>
    <string name="button_skip">SKIP</string>
    <string name="location_man">Location</string>
    <string name="off_duty">OFF</string>
    <string name="sleeper">SB</string>
    <string name="driving">D</string>
    <string name="on_duty">ON</string>
    <string name="personal_use">PC</string>
    <string name="yard_move">YM</string>
    <string name="ILC">ILC</string>
    <string name="ILR">ILR</string>
    <string name="off_duty_long">OFF DUTY</string>
    <string name="sleeper_long">SLEEPER-BERTH</string>
    <string name="driving_long">DRIVING</string>
    <string name="on_duty_long">ON DUTY</string>
    <string name="personal_use_long">PERSONAL USE</string>
    <string name="yard_move_long">YARD MOVE</string>
    <string name="rule_change_activity_title">Rule Change</string>
    <string name="rule_label">Select Rule</string>
    <string name="canada_rule_1">Canada 70hr/7days</string>
    <string name="canada_rule_2">Canada 120hr/14days</string>
    <string name="us_rule_1">US 70hr/8days</string>
    <string name="us_rule_2">US 70hr/8days USV Exemption</string>
    <string name="phone_canada_rule_1">Canada\n70hr/7days</string>
    <string name="phone_canada_rule_2">Canada\n120hr/14days</string>
    <string name="phone_us_rule_1">US\n70hr/8days</string>
    <string name="phone_us_rule_2">US\n70hr/8days USV Exemption</string>
    <string name="login">IN</string>
    <string name="logout">OUT</string>
    <string name="certified_record">CR</string>
    <string name="engine_up">EU</string>
    <string name="engine_down">ED</string>
    <string name="malfunction">MF</string>
    <string name="data_diagnostic">DD</string>
    <string name="new_event_activity_title">New Event</string>
    <string name="event_type">Event Type</string>
    <string name="event_time">Time</string>
    <string name="odometer">Odometer</string>
    <string name="engine_hours">Engine Hours</string>
    <string name="shipping_document_number">Shipping Document Number</string>
    <string name="latitude">Latitude</string>
    <string name="longtitude">Longtitude</string>
    <string name="origin">Origin</string>
    <string name="location_description">Location Description</string>
    <string name="comments">Comments</string>
    <string name="odo">Odo</string>
    <string name="eng_hrs">Eng Hr</string>
    <string name="phone_eventtype">Type</string>
    <string name="phone_shipping_number">Shipping</string>
    <string name="hrs">Hrs</string>
    <string name="record_automatically">Automatic</string>
    <string name="record_manually">Manual</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="duty_status_changed_to_off_duty">Driver\'s Duty Status changed to OFF DUTY</string>
    <string name="duty_status_changed_to_sleeper_berth">Driver\'s Duty Status changed to SLEEPER BERTH</string>
    <string name="duty_status_changed_to_driving">Driver\'s Duty Status changed to DRIVING</string>
    <string name="duty_status_changed_to_on_duty">Driver\'s Duty Status changed to ON DUTY</string>
    <string name="duty_status_changed_to_personal_use">Driver indicates "Authorized Personal Use of CMV"</string>
    <string name="duty_status_changed_to_yard_move">Driver indicates "Yard Moves"</string>
    <string name="texttospeech_duty_status_changed_to_off_duty">you have changed the duty status to Off Duty</string>
    <string name="texttospeech_duty_status_changed_to_sleeper_berth">you have changed the duty status to SLEEPER BERTH</string>
    <string name="texttospeech_duty_status_changed_to_driving">you have changed the duty status to Driving</string>
    <string name="texttospeech_duty_status_changed_to_on_duty">you have changed the duty status to ON DUTY</string>
    <string name="texttospeech_duty_status_changed_to_personal_use">you have changed the duty status to Personal Use</string>
    <string name="texttospeech_duty_status_changed_to_yard_move">you have changed the duty status to Yard Moves</string>
    <string name="hours">Hours</string>
    <string name="record_status_active">Active</string>
    <string name="record_status_inactive">Inactive-Changed</string>
    <string name="record_status_inactive_change_request">Inactive – Change Requested</string>
    <string name="record_status_inactive_change_rejected">Inactive – Change Rejected</string>
    <string name="event">Event</string>
    <string name="record_origin_automatically">Automatically Recorded by the Driver </string>
    <string name="record_origin_edited">Edited or entered by the Driver </string>
    <string name="record_origin_edited_by_other">Edit Requested by an Authenticated User (not-driver) </string>
    <string name="record_origin_assumed">Assumed from Unidentified Driver Profile </string>
    <string name="record_date">Record Date</string>
    <string name="usdot">USDOT</string>
    <string name="carrier">Carrier</string>
    <string name="current_location">Current Location</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_id">Driver ID</string>
    <string name="start_end_odometer">Start End Odometer</string>
    <string name="driver_license_number">Driver License Number</string>
    <string name="driver_license_number_and_state">Driver License / State</string>
    <string name="co_driver_name">Co-Driver Name</string>
    <string name="co_driver_id">Co-Driver ID</string>
    <string name="miles_today">Miles Today</string>
    <string name="driver_license_state">Driver License State</string>
    <string name="eld_manufacturer">ELD Manufacturer</string>
    <string name="truck_tractor_id">Truck Tractor ID</string>
    <string name="truck_tractor_vin">Truck Tractor VIN</string>
    <string name="eld_id">ELD ID</string>
    <string name="shipping_id">Shipping ID</string>
    <string name="unidentified_driver_records">Unidentified Driver Records</string>
    <string name="exempt_driver_status">Exempt Driver Status</string>
    <string name="trailer_id">Trailer ID</string>
    <string name="data_diagnostic_indicators">Data Diagnostic Indicators</string>
    <string name="eld_malfunction_indicators">ELD Malfunction Indicators</string>
    <string name="start_end_engine_hours">Start End Engine Hours</string>
    <string name="commodity">Commodity</string>
    <string name="shipping_number">Shipping Number/Commodity</string>
    <string name="trailer_number">Trailer Number</string>
    <string name="rule">Used Rule</string>
    <string name="menu_daily_log">Daily Log</string>
    <string name="menu_inspect_dailylog">Inspect Dailylog</string>
    <string name="menu_create_event">Create Event</string>
    <string name="menu_uncertified_log_book">Uncertified Log Book</string>
    <string name="menu_unidentified_data">Unidentified Data</string>
    <string name="menu_edit_request">Edit Request</string>
    <string name="menu_violation_history">Violation History</string>
    <string name="menu_driver_profile">Driver Profile</string>
    <string name="menu_Message">Message</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_unidentified_event">Unidentified Event</string>
    <string name="menu_send_report">Send Email</string>
    <string name="menu_dvir">DVIR</string>
    <string name="menu_tpms">TPMS</string>
    <string name="title_eld">ELD</string>
    <string name="title_daily_log">Daily Log</string>
    <string name="title_inspect_elog">Inspect eLog</string>
    <string name="title_create_event">Create Event</string>
    <string name="title_certify_log_book">Certify Logbook</string>
    <string name="title_edit_request">Edit Request</string>
    <string name="title_violation_history">Violation History</string>
    <string name="title_driver_profile">Driver Profile</string>
    <string name="title_Message">Message</string>
    <string name="title_unidentified_event">Unidentified Event</string>
    <string name="title_dvir">DVIR</string>
    <string name="title_new_inspection">New Inspection</string>
    <string name="title_inspection">View Inspection</string>
    <string name="title_shipping_trailers">Shipping &amp; Trailers</string>
    <string name="title_tpms">TPMS</string>
    <string name="title_edit_event">Edit Event</string>
    <string name="title_inspect_dailylog">Log date:</string>
    <string name="title_dtc">DTC</string>
    <string name="title_score_card">Driver Score Card</string>
    <string name="title_trailer_management">Trailer Management </string>
    <string name="title_vehicle_info">Vehicle Info </string>
    <string name="event_origin_automatically">Automatically</string>
    <string name="event_origin_edited">Edited</string>
    <string name="action_confirm_web_event">Confirm</string>
    <string name="action_reject_web_event">Reject</string>
    <string name="action_back_edit_event">Back</string>
    <string name="action_edit_event">Edit</string>
    <string name="action_back_one_day">Back</string>
    <string name="action_forward_one_day">Forward</string>
    <string name="action_set_active">Set Active</string>
    <string name="action_post_all">Post</string>
    <string name="action_sync_all">Sync</string>
    <string name="action_change_rule">Change Rule</string>
    <string name="action_certify_log">Certify Log</string>
    <string name="action_usb_drive">USB Drive</string>
    <string name="action_bluetooth">Bluetooth</string>
    <string name="action_email">Email</string>
</resources>