<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/f5f5f5"
        android:orientation="horizontal">

        <ImageView
            style="@style/DialogIconStyle"
            android:layout_width="@dimen/dialog_icon_size"
            android:layout_height="@dimen/dialog_icon_size" />

        <TextView
            style="@style/DialogTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="Input Detail" />

        <ImageButton
            android:id="@+id/imgCancel"
            style="@style/DialogCloseStyle"
            android:layout_width="@dimen/dialog_close_icon_size"
            android:layout_height="@dimen/dialog_close_icon_size" />
    </LinearLayout>

    <View
        style="@style/DialogTitleSeprator"
        android:layout_width="match_parent"
        android:layout_height="2dp">

    </View>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="12dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edShippingNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shipping_number"
                    android:imeActionLabel="Next"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_12" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edTrailerNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trailer_number"
                    android:imeActionLabel="Save"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_12" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/butSave"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_button_height"
        android:layout_margin="8dp"
        android:background="@drawable/button_bg"
        android:text="@string/button_save"
        android:textSize="@dimen/text_size_14" />
</LinearLayout>